fix: keyboard never brought up on mobile devices

--- a/index.css
+++ b/index.css
@@ -128,6 +128,10 @@ ul {
   font-weight: 700;
 }
 
+.relative {
+  position: relative;
+}
+
 .ml-1 {
   margin-left: 1rem;
 }
@@ -186,13 +190,17 @@ ul {
 }
 
 @keyframes fade {
-  from {
-    opacity: 1;
-  }
-  to {
+  0% {
     opacity: 0;
   }
-}/******************* Main Styles *******************/
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+/******************* Main Styles *******************/
 html,
 body {
   height: 100%;
@@ -251,11 +259,11 @@ a {
 }
 
 .input {
+  position: relative;
   padding: 0;
   border: none;
   color: var(--green-700);
   background: transparent;
-  position: relative;
   outline: none;
   caret-color: transparent;
   width: max-content;
@@ -270,7 +278,18 @@ a {
   width: 1rem;
   height: 2.2rem;
   background: var(--green-700);
-  /* animation: fade 1s infinite; */
+  animation: fade 1s infinite ease;
+}
+
+#hidden-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  pointer-events: none;
+  caret-color: transparent;
 }
 
 .history {
@@ -295,15 +314,15 @@ a {
     width: calc(100% + 14px);
     height: calc(100% + 8px);
     background: conic-gradient(
-      var(--red-500), 
-      var(--orange-500), 
-      var(--yellow-500), 
+      var(--red-500),
+      var(--orange-500),
+      var(--yellow-500),
       var(--green-500),
       var(--emerald-500),
       var(--cyan-500),
       var(--sky-500),
       var(--blue-500),
-      var(--purple-500), 
+      var(--purple-500),
       var(--fuchsia-500),
       var(--pink-500)
     );
@@ -386,7 +405,7 @@ html.light-theme .color-yellow-500.darker {
   }
 
   main {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .pane {
@@ -395,7 +414,12 @@ html.light-theme .color-yellow-500.darker {
 
   .pane.left {
     border-right: none;
-    border-top: 1px solid var(--gray-500);
+    border-bottom: 1px solid var(--gray-500);
+    flex: 1;
+  }
+
+  .pane.right {
+    flex: 2;
   }
 
   html.light-theme .pane.left {
